regression/parse_pool/progtest11.sfp
# Testing erroneous program definition (missing goto keyword)
configuration foo { nullApp() nullNet() nullMac() nullRadio() }
event-condition bar { timer = 8192 TYPE_SECOND }

from any foo when bar

start foo

